--- a/index.html
+++ b/index.html
@@ -14,9 +14,39 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <!-- BootStrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"/>
 </head>
 <body>
-    
+    <header>
+        <h2>Light and Dark</h2>
+        <div>
+            <input type="checkbox" name="change-theme" id="change-theme" />
+            <label for="change-theme">
+              <i class="bi bi-sun"></i>
+              <i class="bi bi-moon"></i
+            ></label>
+        </div>
+    </header>
+
+    <div id="container">
+        <main>
+            <section class="first-section">
+                <h1>Nike</h1>
+                <img src="img/nike.png" alt="nike">
+            </section>
+            <section class="second-section">
+                <h2>Tênis Nike</h2>
+                <h4>Excelente para corridas</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia consequatur veniam obcaecati, deleniti dolor magnam voluptatem optio harum rem error, ea necessitatibus voluptatum esse ex porro odit incidunt aspernatur exercitationem.</p>
+                <div>
+                    <p>R$ 299.90</p>
+                    <button>Comprar</button>
+                </div>
+            </section>
+        </main>
+    </div>
 
     <script src="scripts/main.js"></script>
 </body>
